* Add support for parallel building to deptool.  Checkpoint, want to      also have optional parallel testing, but parallel building seems to      be working.
ProcessManager.pm: new module for managing sub-processes 

src/CMakeLists.txt: add new module

deptool.in: all the code for parallel build

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -93,6 +93,7 @@ IF(PERL_ENABLED)
     	Lintel/Net/SSH/KnownHostsFile.pm
     	Lintel/File/Lock.pm
 	Lintel/DBI.pm
+	Lintel/ProcessManager.pm
     )
 ENDIF(PERL_ENABLED)
 
