--- a/src/deptool.in
+++ b/src/deptool.in
@@ -35,6 +35,7 @@ use Sys::Hostname;
 
 @PERL5_MODULES_INC_UNSHIFT@
 use Lintel::File::Lock;
+use Lintel::ProcessManager;
 
 # TODO: pull should walk in the current directory before walking in the
 # dependent ones since it may need additional dependencies, and/or they
@@ -747,6 +748,7 @@ sub depBuild {
     my %options = @_;
     $options{tests} ||= 0;
 
+    my $parallel = 0;
     my $cwd = aliasGetCwd();
     my $debug = buildDebug();
     if ($cwd =~ /^$debug/o) {
@@ -758,14 +760,19 @@ sub depBuild {
     my $ret = GetOptions("y!" => \$auto_yes_to_prompts,
                          "t|tests!" => \$options{tests},
                          "o|optimize" => sub { $options{mode} = 'optimize' },
-                         "d|debug" => sub { $options{mode} = 'debug' });
+                         "d|debug" => sub { $options{mode} = 'debug' },
+			 "p|parallel!" => \$parallel);
     usage("unknown option to build") unless $ret;
 
     $options{builddir} = $options{mode} eq 'debug' ? buildDebug() : buildOpt();
     $options{projects} = projects();
 
-    depWalk(sub { }, sub { depBuildOne(\%options, @_) }, 1);
-    return %options;
+    if ($parallel) {
+	return depBuildParallel(\%options);
+    } else {
+	depWalk(sub { }, sub { depBuildOne(\%options, @_) }, 1);
+	return %options;
+    }
 }
 
 sub depBuildOne {
@@ -847,7 +854,7 @@ sub depBuildCheckOld {
 
 sub depBuildFindOld {
     my ($src) = @_; 
-    die "??" unless defined $src;
+    confess "?? $src" unless defined $src && -d $src && -f ".deptool.build_stamp";
 
     my $ref_stat = stat(".deptool.build_stamp")
         or die "Unable to stat .deptool.build_stamp: $!";
@@ -862,7 +869,7 @@ sub depBuildFindOld {
 }
 
 sub depBuildMake {
-    my($src, $build, $options) = @_;
+    my($src, $build) = @_;
 
     if (-f ".deptool.build_stamp") {
         print "depbuild: $build already has current build\n";
@@ -898,7 +905,7 @@ sub stampUpToDate {
 
     return 0 unless -f ".deptool.${which}_stamp";
     my $build_stat = stat(".deptool.build_stamp")
-        or die "Unable to stat .deptool.build_stamp: $!";
+        or confess "Unable to stat .deptool.build_stamp: $!";
     my $which_stat = stat(".deptool.${which}_stamp")
         or die "Unable to stat .deptool.${which}_stamp: $!";
     if (defined $options && $which eq "install") {
@@ -934,6 +941,219 @@ sub depBuildInstall {
         runCommand("make","install");
         stamp("install", $options);
     }
+}
+
+sub projectBuildPath {
+    my ($build_dir, $project, $sub_type) = @_;
+
+    my $dir = "$build_dir/$project";
+    $dir .= "-$sub_type" if $sub_type ne '';
+    return $dir;
+}
+
+sub stampTime {
+    my ($build_path, $which) = @_;
+
+    my $file = "$build_path/.deptool.${which}_stamp";
+    return 0 unless -f $file;
+    my $stat = stat($file) or die "Can't stat $file: $!";
+    return $stat->mtime();
+}
+
+sub dbpStartBuild {
+    my ($children, $pending, $dependencies) = @_;
+
+    for (my $i=0; $i < @$pending; ++$i) {
+	my ($build_path, $type) = @{$pending->[$i]};
+	next unless $type eq 'build';
+
+	unless (-d $build_path) {
+	    mkdir($build_path, 0777) or die "Can not mkdir($build_path): $!";
+	}
+	aliasChdir($build_path);
+
+	my $info = $dependencies->{$build_path};
+	my $deps_done_install = 1;
+	my $build_stamp = stampTime($build_path, "build");
+	my $out_of_date = $build_stamp > 0 ? 0 : 1;
+	map { 
+	    my $path = $_;
+	    my $dep_info = $dependencies->{$path};
+
+	    if ($dep_info->{src} eq $info->{src}) { 
+		# ignore self dependencies
+	    } else {
+		if ($dep_info->{done_install}) {
+		    my $them_install_stamp = stampTime($path, 'install');
+		    $out_of_date = 1 if $build_stamp <= $them_install_stamp;
+		} else {
+		    # print "$build_path waiting on $_\n";
+		    $deps_done_install = 0;
+		}
+	    }
+	} keys %{$info->{deps}};
+
+	next unless $deps_done_install;
+
+	splice(@$pending, $i, 1);
+
+	aliasChdir($build_path);
+
+	if (!$out_of_date && $build_stamp > 0) {
+	    my @old = depBuildFindOld(projects() . "/$info->{src}");
+	    if (@old > 0) {
+		print "Local rebuild of $build_path\n";
+		$out_of_date = 1;
+	    }
+	}
+
+	if ($out_of_date) {
+	    print "Start build in $build_path\n";
+	    unlink(".deptool.build_stamp");
+	    $info->{running_build} = 1;
+	    $children->fork(
+		 cmd => sub {
+		     # builds are nice to be behind install/test
+		     POSIX::nice(10) or die "nice failed: $!";
+		     depBuildMake($info->{src}, $build_path);
+		 },
+		 exitfn => sub { $info->{running_build} = 0 },
+		 stdout => 'deptool.build.out', stderr => 'deptool.build.err');
+
+	    return $build_path;
+	} else {
+	    print "Up to date build in $build_path\n";
+	    $info->{done_build} = 1;
+	    return undef;
+	}
+    }
+    # print "No builds active\n";
+    return undef;
+}
+
+sub dbpStartWhich {
+    my ($which, $children, $pending, $dependencies) = @_;
+
+    for (my $i=0; $i < @$pending; ++$i) {
+	my ($build_path, $type) = @{$pending->[$i]};
+	next unless $type eq $which;
+
+	my $info = $dependencies->{$build_path};
+
+	next unless $info->{done_build};
+
+	splice(@$pending, $i, 1);
+
+	my $build_stamp = stampTime($build_path, "build");
+	my $which_stamp = stampTime($build_path, $which);
+
+	if ($which_stamp <= $build_stamp) {
+	    aliasChdir($build_path);
+	    print "Starting $which in $build_path\n";
+	    $info->{"running_$which"} = 1;
+	    $children->fork(cmd => "make $which", exitfn => sub { $info->{"running_$which"} = 0; },
+			    stdout => "deptool.$which.out", stderr => "deptool.$which.err");
+	    return $build_path;
+	} else {
+	    print "Up to date $which in $build_path\n";
+	    $info->{"done_$which"} = 1;
+	    return undef;
+	}
+    }
+    # print "No $which active\n";
+    return undef;
+}
+
+sub dbpFinishWhich {
+    my ($which, $running, $dependencies) = @_;
+
+    my $dir = $running->{$which};
+    return unless defined $dir;
+    my $info = $dependencies->{$dir};
+
+    die "??" unless defined $info->{"running_$which"};
+    unless ($info->{"running_$which"} == 0) {
+	# print "$which not done\n";
+	return;
+    }
+
+    print "Finish $which of $dir\n";
+    aliasChdir($dir);
+    stamp($which);
+    $info->{"done_$which"} = 1;
+    $running->{$which} = undef;
+}
+
+sub depBuildParallel {
+    my ($options) = @_;
+
+    my $projects = projects();
+    my $start_src = rootSrcDir();
+    $start_src =~ s!^.*/!!o;
+
+    # Calculate all things we could build and their dependencies
+    my %dependencies;
+    my @pending = ([$start_src,'']);
+    while (@pending > 0) {
+	my ($src, $sub_build_type) = @{shift @pending};
+	my $build_path = projectBuildPath($options->{builddir}, $src, $sub_build_type);
+	next if defined $dependencies{$build_path};
+	aliasChdir("$projects/$src");
+	my @vcdeps = readVCDeps(".version_control_deps");
+
+	my $info = $dependencies{$build_path} = { 
+	    src => $src,
+	    deps => {}
+	};
+	
+	foreach my $dep (@vcdeps) {
+	    my ($dep_project, $dep_sub_type) = parseDependency($dep);
+
+	    my $dep_src = "$projects/$dep_project";
+	    depWalkTryCheckout($dep_project) unless -d $dep_src;
+
+	    push(@pending, [$dep_project, $dep_sub_type]);
+	    my $dep_path = projectBuildPath($options->{builddir}, $dep_project, $dep_sub_type);
+	    $info->{deps}->{$dep_path} = 1;
+	}
+    }
+    
+    # reverse is a hack to classify some bits later until I can fix it to
+    # estimate and order
+    foreach my $build_dir (reverse sort keys %dependencies) {
+	map { push(@pending, [ $build_dir, $_ ]); } qw/build test install/;
+    }
+
+    @pending = grep ($_->[1] ne 'test', @pending) unless $options->{tests};
+
+    my %running;
+    my $children = new Lintel::ProcessManager(auto_kill_on_destroy => 1);
+
+    my $prev_pending_size = @pending;
+    # Process everything we have to process.
+    while (@pending > 0 || $children->nChildren() > 0) {
+	unless (defined $running{build}) {
+	    $running{build} = dbpStartBuild($children, \@pending, \%dependencies);
+	}
+	foreach my $which (qw/install test/) {
+	    next if defined $running{$which};
+	    $running{$which} = dbpStartWhich($which, $children, \@pending, \%dependencies);
+	}
+
+	if (@pending == $prev_pending_size) {
+	    # only wait if we couldn't get anything removed
+	    die "? $pending[0]->[1] $pending[0]->[0]" unless $children->nChildren() > 0;
+
+	    $children->wait();
+
+	    foreach my $which (qw/build install test/) {
+		dbpFinishWhich($which, \%running, \%dependencies);
+	    }
+	}
+	$prev_pending_size = @pending;
+    }
+
+    return %$options;
 }
 
 ## ##### Dependency clear
@@ -1739,6 +1959,7 @@ sub makeDiffOrder {
 	  $dir ||= '';
 	  $suffix ||= 'no-suffix';
           my $test_key = $dir =~ m!/tests\b!o ? 0 : 1;
+	  my $thrift_key = $suffix eq 'thrift' ? 0 : 1;
           my $header_key = $suffix eq 'hpp' ? 0 : 1;
           my $cmake_key = $name =~ /^CMake/o ? 0 : 1;
           
@@ -2203,8 +2424,7 @@ sub depWalkRecurse ($$$$$$) {
 	    my ($project, $sub_build_type) = parseDependency($dep);
 
             my $depsrc = "$projects/$project";
-	    depWalkTryCheckout($project)
-		unless -d $depsrc;
+	    depWalkTryCheckout($project) unless -d $depsrc;
             depWalkRecurse($pre_fn, $post_fn, $depsrc, $visited, $use_sub_build_type, 
 			   $sub_build_type);
         }
@@ -2636,7 +2856,7 @@ sub quietRunCommand {
 sub aliasChdir {
     my($dir) = @_;
 
-    chdir($dir) or die "Unable to chdir($dir): $!";
+    chdir($dir) or confess "Unable to chdir($dir): $!";
     my $here = getcwd();
     return if defined $Cache::alias_cd{$here};
     print "ACD $here -> $dir\n" if 0;
