references/CMakeLists.txt: add sigcomm.bib to references list.

--- a/doc/references/CMakeLists.txt
+++ b/doc/references/CMakeLists.txt
@@ -31,6 +31,7 @@ SET(BIB_FILES
     scientific-programming.bib
     siam-parallel-scientific.bib
     sigact.bib
+    sigcomm.bib
     sigmod.bib
     sosp.bib
     supercomputing-review.bib
