Overall : 19/HB - Dev Env : || Deptool
Added comment that || deptool hides compile warnings; we already
ignore them more that we ought...

--- a/src/deptool.in
+++ b/src/deptool.in
@@ -1042,6 +1042,10 @@ sub dbpStartBuild {
 	    print "Start build in $build_path\n";
 	    unlink(".deptool.build_stamp");
 	    $info->{running_build} = 1;
+
+	    # TODO : This hides compiler warnings; it would be good to
+	    # extract them out so we see them.
+
 	    $children->fork(
 		 cmd => sub {
 		     # builds are nice to be behind install/test
