* Update OS version detecting to include SuSE. Slightly change what we      include in the "unknown" versions of the os entries.  Make sure we pause      for user input when we detect an unknown OS.    * Cleanup the atomic counter test to scale with machine size
PThread.hpp.in: document return values from getNCpus()

deptool.in: Replace non-word and spaces with _ when generating the "unknown"
  versions of the OS string.  Other changes per above.

atomic_counter.cpp: lots of minor style fixups.  Made the test scale
  with the number of cpus on a machine -- the default of 250 threads
  and 10000 iterations takes a really long time on a slow 2-cpu
  machine, and doesn't really help with the testing.  Two threads and
  1 million iterations is much faster and is likely to catch all the
  same race conditions.  Therefore set # threads = # cpus, or if we
  don't know, guess 32.

--- a/src/deptool.in
+++ b/src/deptool.in
@@ -2973,7 +2973,7 @@ sub operatingSystem {
             } elsif (m!^testing$!o) {
                 $Cache::operating_system = "debian-testing-unstable";
             } else {
-                s/\W//go;
+                s/\W//go; s/\s/_/go;
                 $Cache::operating_system = "debian-unknown-$_";
             }
         } elsif (-f "/etc/redhat-release") {
@@ -2985,14 +2985,29 @@ sub operatingSystem {
             if (/^Red Hat Enterprise Linux.+release (\d+)\b/o) {
                 $Cache::operating_system = "rhel$1";
             } else {
-                s/\W//go;
+                s/\W/_/go; s/\s/_/go;
                 $Cache::operating_system = "rh-unknown-$_";
             }
+	} elsif (-f "/etc/SuSE-release") {
+	    my $susever = new FileHandle("/etc/SuSE-release")
+		or die "Can't open /etc/SuSE-release for read: $!";
+	    $_ = <$susever>;
+	    close($susever);
+	    chomp;
+	    if (/^openSUSE (\d+)\.\d+ /o) {
+		$Cache::operating_system = "opensuse-$1";
+	    } else {
+                s/\W/_/go; s/\s/_/go;
+		$Cache::operating_system = "opensuse-unknown-$_";
+	    }
         } else {
             $Cache::operating_system = "unknown";
         }
         if ($Cache::operating_system =~ /unknown/o) {
-            warn "Unknown OS, using $Cache::operating_system";
+            print "Unknown OS, using $Cache::operating_system\n";
+	    print "Set \$OS to avoid warning, or fix deptool to auto-detect\n";
+	    print "Hit return to continue: ";
+	    $_ = <STDIN>;
         }
     }
     return $Cache::operating_system;
