--- a/include/Lintel/PThread.hpp.in
+++ b/include/Lintel/PThread.hpp.in
@@ -29,6 +29,8 @@ extern "C" {
 class PThreadMisc { // should be a namespace if we believe everyone supports those
 public:
     static int getCurrentCPU(bool unknown_ok = false);
+    /// Return the number of CPUs on the current host.  If unknown_ok is true,
+    /// return -1 if we can not figure out the number of CPUs.
     static int getNCpus(bool unknown_ok = false);
 };	   
 
