* Add script to make a version of deptool that doesn't depend on any of the      Lintel libraries (it embeds them).  This lets us put a single script on      our external web page for people to use.
make-deptool-noexternal.sh: script to make self-contained deptool.

src/CMakeLists.txt: build the no-external version of deptool.

deptool.in: add missing =cut to end of file that's needed so we can append to
  it.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -135,6 +135,12 @@ IF(PERL_ENABLED)
     LIST(APPEND LINTEL_FEATURES perl)
 ENDIF(PERL_ENABLED)
 
+# Built, but intentionally not installed.
+ADD_CUSTOM_TARGET(deptool-noexternal ALL 
+                  COMMAND ${CMAKE_CURRENT_SOURCE_DIR}/make-deptool-noexternal.sh
+		          ${CMAKE_CURRENT_SOURCE_DIR} 
+		  DEPENDS deptool.in Lintel/File/Lock.pm Lintel/ProcessManager.pm)
+
 ################################## LIBRARY
 
 ADD_LIBRARY(Lintel ${LIBRARY_TYPE} ${LIBLINTEL_SOURCES})
