--- a/src/deptool.in
+++ b/src/deptool.in
@@ -1970,7 +1970,15 @@ sub mtnServe {
     my %mtn_opts = readMtnOptions($src);
     die "? no database" unless defined $mtn_opts{database};
 
-    runCommand("mtn","-d",$mtn_opts{database},'serve','*');
+    local $_ = vcVersion();
+    my $vcver = "$_->{type}-$_->{version}";
+    if ($vcver =~ /^monotone-0.28\b/o) {
+	runCommand("mtn","-d",$mtn_opts{database},'serve','*');
+    } elsif ($vcver =~ /^monotone-0.4\d\b/o) {
+	runCommand("mtn","-d",$mtn_opts{database},'serve');
+    } else {
+	die "Don't know how to run serve on $vcver";
+    }
 }
 
 ##### depPublish
